update api.go to include remove/restore user functionality

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 
 		<main class="container">
 			<div class="row justify-content-center">
+				<h3 id="response"></h3>
 				<div class="col-8">
 				<div class="form-group" style="width: 100%;">
 					<label for="store">Store</label>
