--- a/templates/users.html
+++ b/templates/users.html
@@ -10,10 +10,10 @@
 				<div class="card" style="width: 100%;">
 					<div id="responseMessage"></div>
 					 <div class="card-body">
-						<form id="categoriesForm" class="form-inline justify-content-around align-items-center">
+						<form id="usersForm" class="form-inline justify-content-around align-items-center">
 							<div class="form-group">
 								<label class="sr-only" for="username">Username</label>
-								<input type="email" class="form-control" id="category" name="category" placeholder="Category">
+								<input type="email" class="form-control" id="username" name="username" placeholder="Username">
 							</div>
 							<div class="form-group">
 								<label class="sr-only" for="first_name">First Name</label>
@@ -22,6 +22,10 @@
 							<div class="form-group">
 								<label class="sr-only" for="last_name">Last Name</label>
 								<input type="text" class="form-control" id="last_name" name="last_name" placeholder="Last Name">
+							</div>
+							<div class="form-group">
+								<label class="sr-only" for="role">Role</label>
+								<input type="text" class="form-control" id="role" name="role" placeholder="Role">
 							</div>
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</form>
@@ -77,7 +81,7 @@
 									<td>{{ .FirstName }}</td>
 									<td>{{ .LastName }}</td>
 									<td>{{ .Role}}</td>
-									<td><button id="deleted_{{ .UserUuid }}" class="btn btn-danger remove">Remove</button></td>
+									<td><button id="deleted_{{ .UserUuid }}" class="btn btn-success restore">Restore</button></td>
 							</tr>
 						{{ end }}
 					</tbody>
