--- a/templates/home.html
+++ b/templates/home.html
@@ -15,12 +15,11 @@
 				<div class="form-group">
 					<input class="form-control" id="user" name="user" value="{{ .U.UserUuid }}" hidden>
 				</div>
-				<form id="itemsForm">
+				<form id="itemsForm" class="form-inline">
 					<div class="row justify-content-around" id="itemsGroup">
 					</div>
 					<div class="row justify-content-center">
 							<button type="submit" class="btn btn-primary submitButton">Submit</button>
-
 							<button type="button" class="btn btn-secondary">Reset</button>
 					</div>
 				</form>
