--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -7,7 +7,24 @@ main{
 }
 
 .container{
-  /* max-width: 1366px; */
+  max-width: 1920px;
+}
+
+.user-info{
+  text-transform: capitalize;
+}
+
+.text-left{
+  text-align: left;
+}
+
+.text-right{
+  text-align: right;
+}
+
+.table-card{
+  padding: 2em 1em;
+  margin: 0 0 0.5em 0;
 }
 
 .loginWrapper{
@@ -35,12 +52,13 @@ main{
 }
 
 .itemsWrapper{
-  box-sizing: border-box;
   padding: 2em;
-  margin: 1em 0;
-  border: 4px solid black;
-  border-radius: 6px;
-  background-color: rgba(0,0,0,0.1);
+  margin: 0.5em 0;
+}
+
+.item-label{
+  width: 100%;
+
 }
 
 .btn{
