--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,8 @@
-{{template "head"}}
-</head>
-<body>
 
-		{{ partial "nav" }}
 
-		<main class="container">
+		<main class="container" style="max-width: 1366px;">
 			<div class="row justify-content-center">
 				<h3 id="response"></h3>
-				<div class="col-8">
 				<div class="form-group" style="width: 100%;">
 					<label for="store">Store</label>
 					<select class="form-control" id="store" name="store"></select>
@@ -15,7 +10,7 @@
 				<div class="form-group">
 					<input class="form-control" id="user" name="user" value="{{ .U.UserUuid }}" hidden>
 				</div>
-				<form id="itemsForm" class="form-inline">
+				<form id="itemsForm">
 					<div class="row justify-content-around" id="itemsGroup">
 					</div>
 					<div class="row justify-content-center">
@@ -24,15 +19,8 @@
 					</div>
 				</form>
 				</div>
-				<div class="col-4 card">
-					<div class="row">
-						<button id="prev">Prev</button>
-						<button id="next">Next</button>
-					</div>
-				</div>
-			</div>
 		</main>
-{{template "tail"}}
+		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <script src="/assets/js/pages/home.js" type="text/javascript"></script>
-</body>
-</html>
