--- a/templates/passwordResetRequest.html
+++ b/templates/passwordResetRequest.html
@@ -1,8 +1,15 @@
-{{ template "head"}}
+<!DOCTYPE HTML>
+<html>
+<head>
+  <title>Inventory</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
+  <link rel="stylesheet" href="/assets/css/main.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
-
 <body>
-
 	<main class="container loginWrapper">
     <div class="row justify-content-center">
       <h1>Inventory</h1>
@@ -29,27 +36,5 @@
 		</div>
 	</main>
 
-				<!-- <div class="md-card" id="login_card">
-						<div class="md-card-content large-padding" id="login_form">
-								<div class="login_heading">
-										<div class="user_avatar"></div>
-										<p class="uk-text-danger" id="errBlock">{{ .ErrMsg }}</p>
-								</div>
-								<form method="post" action="/passwordresetrequestaction">
-										<div class="uk-form-row">
-												<label for="username">Username</label>
-												<input class="md-input" type="text" id="username" name="username" autofocus />
-										</div>
-										<div class="uk-margin-medium-top">
-												<input type="submit" id="passwordResetReqBtn" class="md-btn md-btn-primary md-btn-block md-btn-large" value="Reset Password" />
-										</div>
-								</form>
-								<div class="md-card-content large-padding">
-										<center> <a href="/login">Login</a> </center>
-								</div>
-						</div>
-				</div> -->
-
-{{ template "tail" }}
 </body>
 </html>
