updating formatting in golang

--- a/templates/passwordReset.html
+++ b/templates/passwordReset.html
@@ -22,7 +22,7 @@
           <span id="errBlock">{{ .Message }}</span>
           <form method="post" action="/passwordresetaction">
               <div class="form-group" hidden>
-                  <input class="form-control" type="text" id="user_uuid" name="user_uuid" value="{{.UserUuid}}" />
+                  <input class="form-control" type="text" id="user_uuid" name="user_uuid" value="{{.UserUUID}}" />
               </div>
               <div class="form-group" hidden>
                   <input class="form-control" type="text" id="security_code" name="securityCode" value="{{.Code}}" />
