--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,11 @@
 
 		<main class="container" style="max-width: 1366px;">
 			<div class="row justify-content-center">
-				<h3 id="response"></h3>
-				<div class="form-group" style="width: 100%;">
-					<label for="store">Store</label>
-					<select class="form-control" id="store" name="store"></select>
-				</div>
-				<div class="form-group">
-					<input class="form-control" id="user" name="user" value="{{ .U.UserUuid }}" hidden>
+				<div class="row">
+					<div class="form-group" style="margin: 1em 0;">
+						<select class="form-control" id="store" name="store"></select>
+						<input class="form-control" id="user" name="user" value="{{ .U.UserUUID }}" hidden>
+					</div>
 				</div>
 				<form id="itemsForm">
 					<div class="row justify-content-around" id="itemsGroup">
@@ -20,6 +18,25 @@
 				</form>
 				</div>
 		</main>
+
+		<div id="responseModal" class="modal" tabindex="-1" role="dialog">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title">Status</h5>
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		          <span aria-hidden="true">&times;</span>
+		        </button>
+		      </div>
+		      <div class="modal-body">
+		        <p id="responseMessage"></p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+		      </div>
+		    </div>
+		  </div>
+		</div>
 		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
