adding order save state capability

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,9 @@
 			<div class="row justify-content-center">
 				<div class="row">
 					<div class="form-group" style="margin: 1em 0;">
-						<select class="form-control" id="store" name="store"></select>
+						<select class="form-control" id="store" name="store">
+							<option></option>
+						</select>
 						<input class="form-control" id="user" name="user" value="{{ .U.UserUUID }}" hidden>
 					</div>
 				</div>
