--- a/templates/passwordResetSuccess.html
+++ b/templates/passwordResetSuccess.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>Inventory</title>
+  <title>Stock Up</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
   <link rel="stylesheet" href="/assets/css/main.css">
@@ -13,7 +13,7 @@
 
   <main class="container loginWrapper">
     <div class="row justify-content-center">
-      <h1>Inventory</h1>
+      <h1>Stock Up</h1>
     </div>
     <div class="row justify-content-center">
       <div class="card" style="width: 22rem;">
