--- a/templates/home.html
+++ b/templates/home.html
@@ -4,14 +4,14 @@
 			<div class="row justify-content-center">
 				<div class="row">
 					<div class="form-group" style="margin: 1em 0;">
-						<select class="form-control" id="store" name="store">
+						<select class="form-control" id="store" name="store" style="width: 20em;">
 							<option></option>
 						</select>
 						<input class="form-control" id="user" name="user" value="{{ .U.UserUUID }}" hidden>
 					</div>
 				</div>
 				<form id="itemsForm">
-					<div class="row justify-content-around" id="itemsGroup">
+					<div class="row justify-content-center" id="itemsGroup" style="padding: 0 1em;">
 					</div>
 					<div class="row justify-content-center">
 							<button type="submit" class="btn btn-primary submitButton">Submit</button>
