--- a/templates/home.html
+++ b/templates/home.html
@@ -11,11 +11,10 @@
 					</div>
 				</div>
 				<form id="itemsForm">
-					<div class="row justify-content-center" id="itemsGroup" style="padding: 0 1em;">
+					<div class="row justify-content-center align-items-stretch" id="itemsGroup">
 					</div>
-					<div class="row justify-content-center">
+					<div class="row justify-content-center" style="margin: 1em 0;">
 							<button type="submit" class="btn btn-primary submitButton">Submit</button>
-							<button type="button" class="btn btn-secondary">Reset</button>
 					</div>
 				</form>
 				</div>
