--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
 					<div class="row justify-content-center align-items-stretch" id="itemsGroup">
 					</div>
 					<div class="row justify-content-center" style="margin: 1em 0;">
-							<button type="submit" class="btn btn-primary submitButton">Submit</button>
+							<button type="button" id="send-btn" class="btn btn-primary send-btn">Send</button>
 					</div>
 				</form>
 				</div>
