--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,23 +1,27 @@
 
 		<main class="container">
-			<div class="row justify-content-around">
-				<div class="col-2 card" style="width: 100%;">
+			<div class="row justify-content-around admin-wrapper">
+				<div class="col-lg-3">
+					<div class="card" style="width: 100%; height: 99%;">
 					<div id="responseMessage"></div>
 					 <div class="card-body">
-						<form id="categoriesForm" class="form-inline justify-content-around align-items-center">
+						<form id="categoriesForm" class="justify-content-around align-items-center">
 							<div class="form-group">
 								<label class="sr-only" for="item_name">Category</label>
 								<input type="text" class="form-control" id="category" name="category" placeholder="Category">
 							</div>
 							<div class="form-group">
 								<label class="sr-only" for="item_name">Description</label>
-								<input type="text" class="form-control" id="description" name="description" placeholder="Description">
+								<textarea rows="6" class="form-control" id="description" name="description" placeholder="Description"></textarea>
 							</div>
-							<button type="submit" class="btn btn-primary">Submit</button>
+							<div class="row justify-content-center">
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</div>
 						</form>
 						</div>
+					</div>
 				</div>
-				<div class="col-9">
+				<div class="col-lg-9">
 					<div class="row justify-content-center">
 							<div class="card table-card" style="width: 100%;">
 								<h3 class="text-center">Current Categories</h3>
