--- a/templates/stores.html
+++ b/templates/stores.html
@@ -1,7 +1,8 @@
 
 		<main class="container">
-			<div class="row justify-content-around">
-				<div class="col-2 card" style="width: 100%;">
+			<div class="row justify-content-around admin-wrapper">
+				<div class="col-lg-3">
+					<div class="card" style="width: 100%; height: 99%;">
 					<div id="responseMessage"></div>
 					 <div class="card-body">
 						<form id="storesForm" class="justify-content-around align-items-center">
@@ -82,11 +83,14 @@
 								<label class="sr-only" for="phone_number">Phone Number</label>
 								<input type="tel" class="form-control" id="phone_number" name="phone_number" placeholder="Phone Number">
 							</div>
-							<button type="submit" class="btn btn-primary">Submit</button>
+							<div class="row justify-content-center">
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</div>
 						</form>
 						</div>
+					</div>
 				</div>
-				<div class="col-9">
+				<div class="col-lg-9">
 					<div class="row justify-content-center">
 							<div class="card table-card" style="width: 100%;">
 								<h3 class="text-center">Current Stores</h3>
