--- a/templates/users.html
+++ b/templates/users.html
@@ -1,10 +1,11 @@
 
 		<main class="container">
-			<div class="row justify-content-around">
-				<div class="col-2 card" style="width: 100%;">
+			<div class="row justify-content-around admin-wrapper">
+				<div class="col-lg-3">
+					<div class="card" style="width: 100%; height: 99%;">
 					<div id="responseMessage"></div>
 					 <div class="card-body">
-						<form id="usersForm" class="form-inline justify-content-around align-items-center">
+						<form id="usersForm" class="justify-content-around align-items-center">
 							<div class="form-group">
 								<label class="sr-only" for="username">Email</label>
 								<input type="email" class="form-control" id="username" name="username" placeholder="Email">
@@ -25,9 +26,12 @@
 									<option value="admin">Admin</option>
 								</select>
 							</div>
-							<button type="submit" class="btn btn-primary">Submit</button>
+							<div class="row justify-content-center">
+								<button type="submit" class="btn btn-primary">Submit</button>
+							</div>
 						</form>
 						</div>
+					</div>
 				</div>
 				<div class="col-9">
 					<div class="row justify-content-center">
