--- a/templates/passwordResetRequest.html
+++ b/templates/passwordResetRequest.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <title>Stock Up</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
   <link rel="stylesheet" href="/assets/css/main.css">
